2003-05-26  Miguel de Icaza  <miguel@ximian.com>

	* ecore.cs (SimpleName.SimpleNameResolve): Consider using aliases
	during regtular simple name resolution.   Now, the trick is that
	instead of returning for processing the simplename, we do a
	TypeManager.LookupType (ie, a rooted lookup as opposed to a
	contextual lookup type).   If a match is found, return that, if
	not, return for further composition.

	This fixes long-standing 30485.

	* expression.cs (ArrayCreation.EmitDynamicInitializers): When
	using the address to initialize an object, do an Stobj instead of
	using the regular Stelem.

	(IndexerAccess.Emit, IndexerAccess.EmitAssign):
	Pass `is_base_indexer' to Invocation.EmitCall instead of false.
	Because if we are a BaseIndexerAccess that value will be true.
	Fixes 43643.

	* statement.cs (GotoCase.Resolve): Return after reporting an
	error, do not attempt to continue. 

	* expression.cs (PointerArithmetic.Emit): If our operand is a
	long, convert our constants to match the operand before
	multiplying.  Convert to I type before adding.   Fixes 43670.
	
2003-05-14  Ravi Pratap  <ravi@ximian.com>

	* enum.cs (ImplicitConversionExists) : Rename to
	ImplicitEnumConversionExists to remove ambiguity. 

	* ecore.cs (NullCast): New type of cast expression class which
	basically is very similar to EmptyCast with the difference being
	it still is a constant since it is used only to cast a null to
	something else
	(eg. (string) null)

	* convert.cs (ImplicitReferenceConversion): When casting a null
	literal, we return a NullCast.

	* literal.cs (NullLiteralTyped): Remove - I don't see why this
	should be around anymore.

	The renaming (reported was slightly wrong). Corrections:

	ConvertImplicitStandard -> ImplicitConversionStandard
	ConvertExplicitStandard -> ExplicitConversionStandard

	* expression.cs (StaticCallExpr.MakeSimpleCall): Resolve arguments
	before passing them in !

	* convert.cs (ImplicitConversionStandard): When comparing for